<resources>
    <string name="app_name" translatable="false">cbay</string>
    <string name="lang_name">Name</string>
    <string name="lang_price">Price</string>
    <string name="lang_description">Description</string>
    <string name="lang_item_condition">Item condition</string>
    <string name="lang_sell_item">Sell item</string>
    <string name="lang_menu_buy_items">Buy items</string>
    <string name="lang_menu_sell_items">Sell items</string>
    <string name="lang_menu_shopping_cart">Shopping cart</string>
    <string name="lang_menu_categories">Categories</string>
    <string name="lang_menu_settings">Settings</string>
    <string name="lang_menu_about">About</string>
    <string name="lang_welcome">Welcome</string>
    <string name="lang_intro">cbay is an online selling and buying platform.</string>
    <string name="lang_choose_language">Choose app language:</string>
    <string name="lang_about_text">App made by Ibrahim Beqiri and Mikko Lerto for course Développement Mobile e Cloud in 2018</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lang_add_to_cart">Add to cart</string>
    <string name="lang_add_category">Add a new category</string>
    <string name="lang_delete_category">Delete a category</string>
    <string name="lang_confirm">Confirm</string>
    <string name="lang_cancel">Cancel</string>
    <string name="lang_write_category_name">Write the name of the category:</string>
    <string name="lang_modify_delete">Modify or delete item?</string>
    <string name="lang_modify">Modify</string>
    <string name="lang_delete">Delete</string>
    <string name="lang_shopping_cart_title">Items in the shopping cart</string>
    <string name="lang_cart_cost">"Total cost: "</string>
    <string name="lang_items_bought">You have successfully bought your items!</string>
    <string name="lang_empty_fields">You need to fill all the fields!</string>
    <string name="lang_buy">Buy</string>
    <string name="lang_qty">"QTY. "</string>
    <string name="lang_empty_cart">You do not have any items in the cart!</string>
    <string name="lang_item_for_sale">You have put an item for sale!</string>
    <string name="lang_category">Category</string>
    <string name="lang_rating_limit">You can only rate between 1 and 5!</string>
    <string name="lang_item_added_to_cart">Item has been added to the cart!</string>
    <string name="lang_empty_category_sell">There are no categories available to sell items right now. Try again later!</string>
    <string name="lang_item_removed_cart">You have removed the item from the cart!</string>
</resources>
