<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.androidonlineshop.androidonlineshop.fragments.CategoriesFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ListView
            android:id="@+id/cartItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </ListView>



        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:weightSum="2.0">

            <TextView
                android:id="@+id/qtyText"
                android:textAlignment="textEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:textSize="15sp"
                android:text="@string/lang_qty" />
            <TextView
                android:id="@+id/qtyNumber"
                android:textSize="15sp"
                android:textAlignment="textStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

            <TextView
                android:id="@+id/totalPriceText"
                android:textAlignment="textEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:textSize="15sp"
                android:text="@string/lang_cart_cost" />
            <TextView
                android:id="@+id/totalPrice"
                android:textSize="15sp"
                android:textAlignment="textStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

            <Button
                android:id="@+id/buyItemsFromCart"
                android:layout_width="26dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:drawableRight="@drawable/ic_attach_money_black_24dp"
                android:text="@string/lang_buy"
                android:textSize="10sp" />

        </LinearLayout>
    </LinearLayout>


</FrameLayout>
